--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
   color: #fff;
   scroll-behavior: smooth;
   line-height: 2 !important;
+  overflow-x: hidden;
 }
 
 body.sign {
@@ -417,4 +418,35 @@ span.validate-tooltip {
   -ms-border-radius: 50% !important;
   -o-border-radius: 50% !important;
   /*z-index: 100;*/
+}
+
+/* card dalam materi outside */
+.list-group-item:first-child {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+.list-group-item:last-child {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.thumbnail {
+  padding: 0 0 15px 0;
+  border: none;
+  border-radius: 0;
+}
+.thumbnail p {
+  margin-top: 15px;
+  color: #555;
+}
+.btn {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #f1f1f1;
+  border-radius: 0;
+  transition: .2s;
+}
+.btn:hover, .btn:focus {
+  border: 1px solid #333;
+  background-color: #fff;
+  color: #000;
 }
